# optipyzer-rs

./: .gitignore  Cargo.toml  README.md
frontend/: next.config.ts  package-lock.json  package.json  tailwind.config.ts
frontend/app/: layout.tsx  page.tsx
frontend/components/: layout.tsx  theme-toggle.tsx
frontend/components/optimizer/: playground.tsx  species-select.tsx
frontend/contexts/: codon-database-context.tsx
frontend/lib/: indexeddb.ts  sqlite.ts  utils.ts
frontend/pages/: _app.tsx  _document.tsx  index.tsx
frontend/queries/: use-codon-usage.ts
multimizer-cli/: Cargo.toml
multimizer-cli/src/: cli.rs  codon_usage.rs  main.rs  utils.rs
multimizer-core/: Cargo.toml
multimizer-core/src/: consts.rs  lib.rs  models.rs  optimizations.rs  utils.rs
multimizer-core/src/db/: interfaces.rs  mod.rs
multimizer-py/: Cargo.toml  pyproject.toml
multimizer-py/src/: lib.rs
multimizer-wasm/: Cargo.toml
multimizer-wasm/src/: lib.rs  models.rs
src/: consts.rs  lib.rs  models.rs  optimizations.rs  utils.rs
src/db/: interfaces.rs  mod.rs
