[package]
name = "optipyzer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.86"
bio = "1.4.0"
rusqlite = { version = "0.30.0", features = ["bundled"] }
statrs = "0.16.0"

[dev-dependencies]
rstest = "0.18.2"
pretty_assertions = "1.4.0"