[package]
name = "multimizer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.86"
bio = "1.4.0"
rand = "0.8.5"
rand_chacha = "0.3.1"
rusqlite = { version = "0.30.0", features = ["bundled"], optional = true }
statrs = "0.16.0"

[dev-dependencies]
rstest = "0.18.2"
pretty_assertions = "1.4.0"

[features]
sqlite = ["rusqlite"]
