[package]
name = "multimizer-py"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "multimizer"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.21", features=["anyhow", "extension-module"] }
anyhow = "1.0.82"
multimizer = { path = "../multimizer-core" }
